- Changing endpoint to Marvel API - Adding CoordinatorLayout, Toolbar, RecyclerView and CardView (all via Anko) - Adding Rx as the retrofit adapter - Using Glide for image loading

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">kotlin-dagger-example</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">KARD</string>
 
+    <string name="characters_title">Characters</string>
+    <string name="retrieve_marvel_characters">Retrieve Marvel Characters</string>
 </resources>
