Decoupling layers and refactoring

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">KARD</string>
+    <string name="app_name">DARK</string>
 
     <string name="characters_title">Characters</string>
     <string name="retrieve_marvel_characters">Retrieve Marvel Characters</string>
